--- a/src/main/resources/application-log.yml
+++ b/src/main/resources/application-log.yml
@@ -8,6 +8,10 @@ logging:
     # mybatis日志
     org.mybatis: debug
     com.example.nettyrpc: debug
+    io:
+      netty:
+        handler:
+          logging: debug
   charset:
     # 输出控制台编码
     console: UTF-8
